[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.16", features = ["cargo"]}
shlex = "1.2.0"
anyhow = "1.0.79"
thiserror = "1.0.56"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"


[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.0.4"
tempfile = "3.9.0"
walkdir = "2.4.0"